# datarecordings

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DNF  DNF.cpp  DartConfiguration.tcl  ECGch1_EMGch2_RwristNoise_01.tsv  ECGch1_EMGch2_rightwristNoise_00.tsv  LMS  LMS.cpp  Makefile  README.md  Untitled.ipynb  butterworth  butterworth.cpp  cmake_install.cmake  coeff.py  datarecordings  implementation.ipynb  input_analysis.py  layerWeight1.txt  layerWeight2.txt  layerWeight3.txt  lmsfilter  lmsfilter.cpp  neuronWeight31.txt  parameters.h  parameters2.h  plotresults.py  prefilter  prefilter.cpp  preprocessing.py  preprocessingplots.py  results.py
.ipynb_checkpoints/: DataFiles.py  Untitled-checkpoint.ipynb
Document/example/: abstract.tex
clBP/: Makefile  cmake_install.cmake
data/data1.06/: ECGL2_ch2Rarm.tsv  cleanECGL2.tsv  cleanECGL2t2.tsv
data/data1.06/.ipynb_checkpoints/: ECGL2_ch2Rarmt-checkpoint.tsv  Untitled-checkpoint.ipynb
data/data1.29/: bicep2.tsv  bicepnoise.tsv
data/data2.09/: bicepnoise.tsv
data/datafirst/: ECGch1_EMGch2_rwristN_02.tsv
old_clBP/lib/: Neuron.cpp
